# agents

./: .env.example  .gitignore  CLAUDE.md  CODEOWNERS  README.md  authorize_arcade.py  pyproject.toml
.claude/agents/: architect.md  backend-engineer.md  designer.md  engineer.md  frontend-engineer.md  infrastructure-engineer.md  integration-engineer.md  issue-creator.md  judge.md  ml-engineer.md  orchestrator.md  performance-engineer.md  project-manager.md  reviewer.md  test-writer.md
.claude/skills/create-issue/: SKILL.md
.claude/skills/evaluate/: SKILL.md
.claude/skills/implement-feature/: SKILL.md
.github/: README.md
.github/scripts/: setup-branch-protection.sh
.github/workflows/: ci.yml  claude.yml  integration.yml
deployment/gcp/: .gitignore  iam.tf  instance-template.sh  main.tf  outputs.tf  secrets.tf  startup-script.sh  teardown.sh  terraform.tfvars.example  variables.tf
docs/architecture/: agent-roles.md  moe-routing.md
docs/evaluation/: bias-awareness.md  judge-calibration.md  rubrics.md
orchestration/: __init__.py  backends.py  cli.py  config.py  cost.py  execution.py  judge.py  remote.py  router.py  sync_engine.py
orchestration/prompts/: __init__.py  judge_prompts.py  review_prompts.py  router_prompt.py
orchestration/rubrics/: __init__.py  code_review.py  test_quality.py  visual_fidelity.py
orchestration/tests/: __init__.py  test_backends.py  test_config.py  test_cost.py  test_execution.py  test_judge.py  test_remote.py  test_router.py  test_rubrics.py  test_sync_engine.py
projects/unity-space-sim/: PROJECT_EPIC.md  README.md
(+39 files in other folders)
